Create spinner. Modify Contact Master table of  structure. Add History table. Add Limit master table. Add menu. Change screen design. Modify target Android version.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,8 @@
             android:name="com.google.android.gms.ads.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:theme="@android:style/Theme.Translucent" />
-        <activity android:name=".AddingActivity"></activity>
+        <activity android:name=".AddingContactActivity" />
+        <activity android:name=".AddingLimitActivity" />
     </application>
 
 </manifest>
